# hmmcopy_utils

./: CMakeLists.txt  README  README.md  correct_read_count.py  hmmcopy_license.txt  run_test.sh  test.py
compare_models/: compare_model_results.py  correct_read_count.py  hmmcopy_corr.R
gccounter/: README.md  __init__.py  gc_counter.py
lib/: CMakeLists.txt  Makefile
lib/fastahack/: Fasta.cpp  LargeFileSupport.h
lib/kent/inc/: portable.h
lib/kent/lib/: bwgQuery.c  osunix.c  portimpl.c  udc.c
mapcounter/: README.md  __init__.py  bowtie_index.py  fasta_to_read.py  map_counter.py  mapcounter.py  read_to_map.py  run.py
readcounter/: README.md  __init__.py  read_counter.py
src/util/: CMakeLists.txt  Makefile  cmake_install.cmake  renameChr.pl
src/util/mappability/: generateMap.pl
src/util/mappability/internal/: fastaToRead.cpp
src/util/seg/: segToGc.cpp  segToMap.cpp
util/bigwig/: bigWigInfo  bigWigSummary  bigWigToBedGraph  bigWigToWig  wigToBigWig
util/mappability/internal/: fastaToRead  readToMap.pl
util/seg/: segToGc  segToMap
